<resources>
    <string name="app_name">PizzaAppXXXX</string>
    <string name="slogan">Best Pizza in Town</string>
    <string name="slogan2">Premium pizza fresh from the oven</string>
    <!--Chasier Data-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="level">Level</string>
    <!--Button Lable-->
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <!--Activity Title-->
    <string name="loginPage">Log In</string>
    <string name="profile">Profile</string>
    <string name="aboutDeveloper">About Developer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>