<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/slogan" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan2"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/next"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:backgroundTint="@color/red"/>


</LinearLayout>